<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Iso200082App</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="dd_m1">Mechanism 1</string>
    <string name="dd_m4">Mechanism 4</string>
    <string name="dd_m5">Mechanism 5</string>
    <string name="keylen">Key Length</string>
    <string name="go">go</string>
    <string name="abort">abort</string>
    <string name="status">Status</string>
    <string name="meanlabel">Mean:</string>
    <string name="stddevlabel">Std. Dev.:</string>
    <string name="minlabel">Min:</string>
    <string name="maxlabel">Max:</string>
    <string name="fixed_setup">Fixed Group</string>
    <string name="rb_precomp0">No Precomp.</string>
    <string name="rb_precomp1">Part. P.</string>
    <string name="rb_precomp2">Full P.</string>
    <string name="rb_bigint">BigInteger</string>
    <string name="rb_fixedwidth">Fixed W.</string>
    <string name="monty">Mont.</string>
    <string name="rb_multaffine">Affine Mult.</string>
    <string name="rb_multmixed">Mixed Mult.</string>
    
    <string name="numiterationshint">Number of iterations</string>
    <string name="i100">100</string>
    
    <string name="len_prompt">Choose key length:</string>
    <string name="iter_prompt">Iterations:</string>
    
    <string name="mechanism_prompt">Choose mechanism:</string>
    <string-array name="mechanism_array">
        <item>Mechanism 1</item>
        <item>Mechanism 4</item>
        <item>Mechanism 5</item>
    </string-array>
    
    <string name="op_prompt">Choose operation to assess:</string>
    <string-array name="op_array">
        <item>Create</item>
        <item>Join</item>
        <item>Sign</item>
        <item>Verify</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>

</resources>